search api to lookup stored videos

--- a/search/templates/search/index.html
+++ b/search/templates/search/index.html
@@ -37,7 +37,15 @@
   <section class="jumbotron text-center">
     <div class="container">
       <h1 class="jumbotron-heading">Cricket YouTube Videos</h1>
-    </div>  
+      <form method="GET">
+        <div class="input-group mb-3">
+          <input type="text" name="q" class="form-control" aria-label="Username" placeholder="Search fetched videos here">
+        </div>
+        <p>
+          <button type="submit" class="btn btn-primary my-2">Search fetched video</button>
+        </p>
+      </form>
+    </div>
   </section>
 
   <div class="album py-5 bg-light">
